kubernetes/pr-agent/overlays/okd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pr-agent
  labels:
    app.kubernetes.io/name: pr-agent
    app.kubernetes.io/instance: pr-agent
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
