kubernetes/pr-agent/overlays/okd/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pr-agent
  namespace: pr-agent
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress
  hostnames: ["pr-agent.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pr-agent
          namespace: pr-agent
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
